--- a/src/app/ui/mario-background/MarioBackground.css
+++ b/src/app/ui/mario-background/MarioBackground.css
@@ -8,7 +8,6 @@
 
 body {
   background-color: black;
-  cursor: none;
   overflow: hidden;
 }
 
@@ -19,6 +18,7 @@ body {
 }
 
 #star-container {
+  z-index: -1;
   background: radial-gradient(
     rgb(var(--light-gold-rgb)),
     rgb(var(--dark-gold-rgb))
@@ -34,7 +34,7 @@ body {
   left: 50%;
   top: 0;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: -2;
   height: 100%;
   width: 100%;
   opacity: 0.1;
@@ -53,12 +53,12 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0.9;
-  z-index: 2;
+  z-index: -1;
 }
 
 #stripe-container {
   position: absolute;
-  z-index: 3;
+  z-index: 1;
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
